# FansMedal2Excel

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  dataHandling.py  getMedal.py  login.py
